<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <include layout="@layout/include_titlebar"

        ></include>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E4EA"></View>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.header.FalsifyHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="@color/white_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_User_info1"
                    android:textColor="#333333"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_User_info2"
                    android:textColor="#333333"
                    android:textSize="14sp"></TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_User_info3"
                    android:textColor="#333333"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_User_info4"
                    android:textColor="#333333"
                    android:textSize="14sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_User_info5"
                    android:textColor="#333333"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_User_info6"
                    android:textColor="#333333"
                    android:textSize="14sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/text_User_info7"
                    android:textColor="#333333"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_User_info8"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    android:layout_marginBottom="60dp"
                    ></TextView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</LinearLayout>