<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
 >


    <include layout="@layout/include_titlebar"

        ></include>


    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.header.FalsifyHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_color"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/login_title_for_reset"
                    android:textColor="@color/home_lf_title"
                    android:textSize="22sp"></TextView>

                <com.widget.miaotu.common.utils.home.EditViewWithDel
                    android:id="@+id/et_code_phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/logn_editext_phone"
                    android:maxLines="1"
                    android:textColor="@color/home_lf_title"
                    android:textColorHint="@color/color_mp_miaoshu"
                    android:textSize="@dimen/textSize_15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="#E2E4EA"></View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"

                    android:orientation="horizontal">

                    <com.widget.miaotu.common.utils.home.EditViewWithDel
                        android:layout_width="match_parent"
                        android:layout_height="50dp"

                        android:layout_marginRight="40dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/logn_editext_code"
                        android:maxLines="1"
                        android:textColor="@color/home_lf_title"
                        android:textColorHint="@color/color_mp_miaoshu"
                        android:textSize="@dimen/textSize_15" />

                    <TextView
                        android:id="@+id/tv_login_getCode"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/getCode"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textSize_13"

                        ></TextView>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="#E2E4EA"></View>


                <com.widget.miaotu.common.utils.home.EditViewWithDel
                    android:id="@+id/et_code_password_reset"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:layout_marginLeft="40dp"
                    android:hint="@string/logn_editext_pas_rest"
                    android:maxLines="1"
                    android:textColor="@color/home_lf_title"
                    android:textColorHint="@color/color_mp_miaoshu"
                    android:textSize="@dimen/textSize_15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="#E2E4EA"></View>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</LinearLayout>