<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">


    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/home_refreshLayout"
        android:background="@color/qmui_config_color_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/home_nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/home_headview" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_home_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_lf_name1"
                    android:textColor="@color/home_lf_title"

                    android:textSize="@dimen/home_lf_textSize"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_home_host"
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_lf_name2"
                    android:textColor="@color/home_lf_title"
                    android:textSize="@dimen/home_lf_textSize"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_home_newsTuiGuang"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >

                    <TextView
                        android:id="@+id/tv_home_zxmm_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/home_lf_name3"
                        android:textColor="@color/home_lf_title"
                        android:textSize="@dimen/home_lf_textSize"></TextView>

                    <TextView
                        android:id="@+id/tv_home_fujinmiaomu_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="附近苗木"
                        android:textColor="#666666"
                        android:textSize="15sp"></TextView>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_home_newsMiaoMu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <ImageView
        android:id="@+id/iv_home_fabu"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="65dp"
        android:background="@mipmap/iv_fabu_wenben">

    </ImageView>


</FrameLayout>